--- a/Wynncs.csproj
+++ b/Wynncs.csproj
@@ -85,6 +85,7 @@
     <Folder Include=".git\refs\tags\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\FileSystem.cs" />
     <Compile Include="TestEntry.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
