--- a/Wynncs.csproj
+++ b/Wynncs.csproj
@@ -85,8 +85,8 @@
     <Folder Include=".git\refs\tags\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\FileSystem.cs" />
-    <Compile Include="src\XmlUtil.cs" />
+    <Compile Include="Util\FileSystem.cs" />
+    <Compile Include="Util\XmlUtil.cs" />
     <Compile Include="TestEntry.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
